idk what am i doing

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
     </div>
   </nav>
   
-  <div class="relative container mx-auto px-4 !min-h-screen pb-20">
-    <div class="relative flex flex-wrap justify-center items-center -m-6 lg:pt-32 pb-36 min-h-screen">
+  <div class="relative container mx-auto px-4 !min-h-screen   pb-20">
+    <div class="relative flex flex-wrap justify-center items-center -m-6 lg:pt-32 pb-36 min-h-screen sm:pt-52">
       <div class="w-full lg:w-auto p-6 self-start pt-10">
-        <img class="mx-auto w-60 transition-transform duration-300 hover:scale-125" lodaing="lazy" decoding="async" src="./public/images/wildan-header.svg" alt="">
+        <img class="mx-auto w-60 transition-transform duration-300 hover:scale-125 sm:pt-52" lodaing="lazy" decoding="async" src="./public/images/wildan-header.svg" alt="">
         <p class="text-lg text-center font-bold mt-4 text-white">Wildan Fathan</p>
       </div>
       <div class="flex-1 p-6">
@@ -151,7 +151,7 @@
   });
 </script>
 
-<section class="relative py-12 bg-white/50 pb-20  pt-20">
+<section class="relative py-12 bg-white/50 pb-20 h-screen  pt-20">
   <h1 class="max-w-5xl mb-4 text-4xl tracking-tight leading-none md:text-5xl xl:text-6xl text-center text-white font-semibold mx-auto pb-10 relative z-20">
     Apasih PPLG Itu ? <br>
 </h1>
