--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="flex flex-wrap items-center">
           <div class="w-auto mr-14">
             <a href="#">
-              <img loading="lazy" decoding="async" src="./public/images/icon/pplg-white-icon.svg" alt="" class="w-20 transition-transform duration-300 hover:scale-150">
+              <img loading="lazy" decoding="async" loading="lazy" decoding="async" src="./public/images/icon/pplg-white-icon.svg" alt="" class="w-20 transition-transform duration-300 hover:scale-150">
             </a>
           </div>
         </div>
@@ -58,7 +58,7 @@
             <div class="flex items-center justify-between -m-2">
               <div class="w-auto p-2">
                 <a class="inline-block" href="#">
-                  <img loading="lazy" decoding="async" src="./public/images/icon/pplg-black-icon.svg" alt="" class="transition-transform duration-300 hover:scale-125 w-20">
+                  <img loading="lazy" decoding="async" loading="lazy" decoding="async" src="./public/images/icon/pplg-black-icon.svg" alt="" class="transition-transform duration-300 hover:scale-125 w-20">
                 </a>
               </div>
               <div class="w-auto p-2">
@@ -104,7 +104,7 @@
   <div class="relative container mx-auto px-4 !min-h-screen   pb-20">
     <div class="relative flex flex-wrap justify-center items-center -m-6 lg:pt-32 pb-36 min-h-screen sm:pt-52">
       <div class="w-full lg:w-auto p-6 self-start pt-10">
-        <img class="mx-auto w-60 transition-transform duration-300 hover:scale-125 sm:pt-52" lodaing="lazy" decoding="async" src="./public/images/wildan-header.svg" alt="">
+        <img loading="lazy" decoding="async" class="mx-auto w-60 transition-transform duration-300 hover:scale-125 sm:pt-52" loading="lazy" decoding="async" src="./public/images/wildan-header.svg" alt="">
         <p class="text-lg text-center font-bold mt-4 text-white">Wildan Fathan</p>
       </div>
       <div class="flex-1 p-6">
@@ -114,7 +114,7 @@
               <path d="M6.33427 2.74895C6.54382 2.10403 7.45621 2.10403 7.66575 2.74895L8.41445 5.0532C8.50816 5.34162 8.77693 5.53689 9.08019 5.53689H11.503C12.1811 5.53689 12.4631 6.40462 11.9145 6.8032L9.95436 8.22731C9.70902 8.40556 9.60636 8.72152 9.70007 9.00994L10.4488 11.3142C10.6583 11.9591 9.92018 12.4954 9.37158 12.0968L7.41146 10.6727C7.16612 10.4945 6.8339 10.4945 6.58856 10.6727L4.62844 12.0968C4.07985 12.4954 3.34171 11.9591 3.55126 11.3142L4.29995 9.00994C4.39367 8.72152 4.29101 8.40556 4.04566 8.22731L2.08555 6.8032C1.53695 6.40462 1.81889 5.53689 2.497 5.53689H4.91984C5.22309 5.53689 5.49186 5.34162 5.58558 5.0532L6.33427 2.74895Z" fill="white"></path>
             </svg>
             <span class="matrix-text">
-              <img loading="lazy" decoding="async" src="./public/images/icon/pplg-white-icon.svg" alt="PPLG Icon" class="w-20">
+              <img loading="lazy" decoding="async" loading="lazy" decoding="async" src="./public/images/icon/pplg-white-icon.svg" alt="PPLG Icon" class="w-20">
             </span>
           </div>
           <h1 class="mb-6 font-heading text-center text-white text-4xl md:text-9xl xl:text-12xl font-bold matrix-text p-4">Pengembangan Perangkat Lunak dan Gim</h1>
@@ -134,7 +134,7 @@
         </div>
       </div>
       <div class="w-full lg:w-auto p-6 self-end">
-        <img class="mx-auto w-60 transition-transform duration-300 hover:scale-125" loading="lazy" decoding="async" src="./public/images/rahsya-header.svg" alt="">
+        <img loading="lazy" decoding="async" class="mx-auto w-60 transition-transform duration-300 hover:scale-125" loading="lazy" decoding="async" src="./public/images/rahsya-header.svg" alt="">
         <p class="text-lg text-center font-bold mt-4 text-white">Rahsya Benova Akbar</p>
       </div>
     </div>
@@ -191,28 +191,28 @@
     </div>
     <div class="grid grid-cols-1 gap-12 lg:col-span-2 sm:grid-cols-2">
       <div class="relative flex items-start space-x-4 p-4 rounded-lg hover:bg-gray-300/50 transition-colors group animate__animated animate__fadeInTopLeft ms1s5">
-        <img loading="lazy" src="./public/images/tujuan/mob-dev.svg" alt="Mobile Apps logo" class="w-12 h-12">
+        <img loading="lazy" decoding="async" loading="lazy" src="./public/images/tujuan/mob-dev.svg" alt="Mobile Apps logo" class="w-12 h-12">
         <div>
           <h3 class="font-bold text-xl text-white">Mobile Apps</h3>
           <p class="text-gray-200 mt-2">Siswa diharapkan mampu membuat aplikasi mobile berbasis sistem operasi Android untuk dioperasikan di smartphone masing-masing.</p>
         </div>
       </div>
       <div class="flex items-start space-x-4 p-4 rounded-lg hover:bg-gray-300/50 transition-colors animate__animated animate__fadeInTopRight ms1s5">
-        <img loading="lazy" src="./public/images/tujuan/software.svg" alt="Desktop Software" class="w-12 h-12">
+        <img loading="lazy" decoding="async" loading="lazy" src="./public/images/tujuan/software.svg" alt="Desktop Software" class="w-12 h-12">
         <div>
           <h3 class="font-bold text-xl text-white">Desktop Software</h3>
           <p class="text-gray-200 mt-2">Siswa diharapkan mampu membuat aplikasi berbasis desktop dengan menganalisa kebutuhan bisnis yang ada di dunia nyata.</p>
         </div>
       </div>
       <div class="flex items-start space-x-4 p-4 rounded-lg hover:bg-gray-300/50 transition-colors animate__animated animate__fadeInBottomLeft ms1s5">
-        <img loading="lazy" src="./public/images/tujuan/it-cons.svg" alt="IT Konsultan" class="w-12 h-12">
+        <img loading="lazy" decoding="async" loading="lazy" src="./public/images/tujuan/it-cons.svg" alt="IT Konsultan" class="w-12 h-12">
         <div>
           <h3 class="font-bold text-xl text-white">IT Konsultan</h3>
           <p class="text-gray-200 mt-2">Siswa diharapkan mampu memberikan gambaran dan saran pengembangan bisnis tradisional untuk menerapkan teknologi pada industrinya.</p>
         </div>
       </div>
       <div class="flex items-start space-x-4 p-4 rounded-lg hover:bg-gray-300/50 transition-colors animate__animated animate__fadeInBottomRight ms1s5">
-        <img loading="lazy" src="./public/images/tujuan/web-application.svg" alt="Web Application" class="w-12 h-12">
+        <img loading="lazy" decoding="async" loading="lazy" src="./public/images/tujuan/web-application.svg" alt="Web Application" class="w-12 h-12">
         <div>
           <h3 class="font-bold text-xl text-white">Web Application</h3>
           <p class="text-gray-200 mt-2">Siswa diharapkan mampu membuat aplikasi website dari nol dengan mengikuti standar pemrograman yang berlaku di dunia industri saat ini.</p>
