--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
   </nav>
   
   <div class="relative container mx-auto px-4 !min-h-screen   pb-20">
-    <div class="relative flex flex-wrap justify-center items-center -m-6 lg:pt-32 pb-36 min-h-screen sm:pt-52">
+    <div class="relative flex flex-wrap justify-center items-center -m-6 lg:pt-32 pb-36 min-h-screen ">
       <div class="w-full lg:w-auto p-6 self-start pt-10">
-        <img loading="lazy" decoding="async" class="mx-auto w-60 transition-transform duration-300 hover:scale-125 sm:pt-52" loading="lazy" decoding="async" src="./public/images/wildan-header.svg" alt="">
+        <img loading="lazy" decoding="async" class="mx-auto w-60 transition-transform duration-300 hover:scale-125 " loading="lazy" decoding="async" src="./public/images/wildan-header.svg" alt="">
         <p class="text-lg text-center font-bold mt-4 text-white">Wildan Fathan</p>
       </div>
       <div class="flex-1 p-6">
