--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <title>Page title</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;600;700&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap">
     <link rel="stylesheet" href="./public/css/tailwind/tailwind.min.css"> 
     <link rel="stylesheet" href="./public/css/main.css">
     <link rel="icon" type="image/png" sizes="32x32" href="shuffle-for-tailwind.png">
-    <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.3/dist/cdn.min.js" defer></script>
+    <script src="./public/js/alpine.js" defer></script>
 </head>
 <body class="antialiased bg-body text-body font-body" loading="lazy " decoding="ansync" style="background-image: url(./public/images/background.gif);">
   <section x-data="{ mobileNavOpen: false }" class="bg-gradient-fuchsia background-animate overflow-hidden ">
