--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="./public/css/tailwind/tailwind.min.css"> 
     <link rel="stylesheet" href="./public/css/main.css">
     <link rel="icon" type="image/png" sizes="32x32" href="shuffle-for-tailwind.png">
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+<script>
+  AOS.init({
+    duration: 5000, // Sets the duration for each animation
+    once: false,    // Allow repeat animation on scroll
+    offset: 200     // Set the offset from the top to trigger animations
+  });
+</script>
+
     <script src="./public/js/alpine.js" defer></script>
 </head>
 <body class="antialiased bg-body text-body font-body" loading="lazy " decoding="ansync" style="background-image: url(./public/images/background.gif);">
@@ -175,7 +186,9 @@
   }
 </script>
 
+<style>
 
+</style>
   
   <div class="absolute inset-0 bg-cover bg-center blud-md" style="background-image: url('./public/images/tujuan/tujuan-bg.jpg');">
     <div class="absolute inset-0 bg-black opacity-80"></div>
@@ -186,41 +199,89 @@
       <h1 class="mt-2 text-3xl font-bold text-white md:text-4xl tracking-wide">Tujuan Jurusan</h1>    
       <p class="mt-4 text-gray-200">Jurusan PPLG, tujuan jurusan ini adalah membekali siswa dengan keterampilan dalam pengembangan perangkat lunak, pemrograman, dan teknologi digital. Kami fokus pada penguasaan teknik coding, pembuatan aplikasi, dan analisis sistem yang relevan dengan industri. Harapannya, lulusan siap bersaing dalam dunia kerja atau melanjutkan pendidikan lebih tinggi.</p>
     </div>
-    <div class="grid grid-cols-1 gap-12 lg:col-span-2 sm:grid-cols-2">
-      <div class="relative flex items-start space-x-4 p-4 rounded-lg hover:bg-gray-300/50 transition-colors group animate__animated animate__fadeInTopLeft ms1s5">
-        <img loading="lazy" decoding="async" loading="lazy" src="./public/images/tujuan/mob-dev.svg" alt="Mobile Apps logo" class="w-12 h-12">
-        <div>
+    <div class="grid grid-cols-1 gap-12 lg:col-span-2 sm:grid-cols-2" id="card-container">
+     <div class="relative flex items-start space-x-4 p-4 rounded-lg hover:bg-gray-300/50 transition-colors duration-300 group card" data-aos="zoom-in" data-aos-delay="500">
+      <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" class="icon default-icon  text-gray-200" viewBox="0 0 502.664 502.664">
+          <path d="M310.166,397.593H75.951V61.671h234.151v25.13h31.472V54.811C341.595,24.677,316.853,0,286.74,0H99.355
+              C69.199,0,44.522,24.677,44.522,54.811v393.02c0,30.178,24.677,54.833,54.833,54.833H286.74
+              c30.113,0,54.855-24.655,54.855-54.833V397.01h-31.429C310.166,397.01,310.166,397.593,310.166,397.593z M193.015,475.226
+              c-13.892,0-25.108-11.238-25.108-25.108c0-13.913,11.217-25.13,25.108-25.13c13.913,0,25.152,11.238,25.152,25.13
+              C218.167,463.988,206.929,475.226,193.015,475.226z"/>
+          <rect x="102.785" y="95.386" width="70.256" height="42.84"/>
+          <rect x="102.785" y="205.073" width="70.256" height="42.84"/>
+          <rect x="102.785" y="319.873" width="70.256" height="42.818"/>
+          <path d="M422.399,223.905c-2.481-12.986-7.507-25.001-14.625-35.506l25.195-25.216l-25.734-25.648l-25.152,25.173
+              c-10.462-7.161-22.541-12.123-35.484-14.625v-35.7h-36.411v35.7c-12.964,2.502-24.936,7.485-35.505,14.625l-25.108-25.173
+              l-25.734,25.669l25.152,25.216c-7.097,10.505-12.101,22.52-14.582,35.484h-35.657v36.39h35.656
+              c2.481,12.921,7.507,24.936,14.603,35.484l-25.173,25.173l25.734,25.626l25.173-25.152c10.527,7.161,22.541,12.144,35.505,14.668
+              v35.635h36.411v-35.656c12.942-2.481,24.936-7.507,35.484-14.625l25.152,25.152l25.734-25.648l-25.195-25.173
+              c7.118-10.505,12.123-22.541,14.625-35.505h35.678l0,0v-36.368H422.399z M328.437,281.693c-21.894,0-39.669-17.688-39.669-39.604
+              c0-21.894,17.774-39.69,39.669-39.69c21.916,0,39.604,17.774,39.604,39.69C368.041,264.026,350.309,281.693,328.437,281.693z"/>
+      </svg>
+      <div>
           <h3 class="font-bold text-xl text-white">Mobile Apps</h3>
           <p class="text-gray-200 mt-2">Siswa diharapkan mampu membuat aplikasi mobile berbasis sistem operasi Android untuk dioperasikan di smartphone masing-masing.</p>
-        </div>
-      </div>
-      <div class="flex items-start space-x-4 p-4 rounded-lg hover:bg-gray-300/50 transition-colors animate__animated animate__fadeInTopRight ms1s5">
-        <img loading="lazy" decoding="async" loading="lazy" src="./public/images/tujuan/software.svg" alt="Desktop Software" class="w-12 h-12">
-        <div>
-          <h3 class="font-bold text-xl text-white">Desktop Software</h3>
-          <p class="text-gray-200 mt-2">Siswa diharapkan mampu membuat aplikasi berbasis desktop dengan menganalisa kebutuhan bisnis yang ada di dunia nyata.</p>
-        </div>
-      </div>
-      <div class="flex items-start space-x-4 p-4 rounded-lg hover:bg-gray-300/50 transition-colors animate__animated animate__fadeInBottomLeft ms1s5">
-        <img loading="lazy" decoding="async" loading="lazy" src="./public/images/tujuan/it-cons.svg" alt="IT Konsultan" class="w-12 h-12">
-        <div>
-          <h3 class="font-bold text-xl text-white">IT Konsultan</h3>
-          <p class="text-gray-200 mt-2">Siswa diharapkan mampu memberikan gambaran dan saran pengembangan bisnis tradisional untuk menerapkan teknologi pada industrinya.</p>
-        </div>
-      </div>
-      <div class="flex items-start space-x-4 p-4 rounded-lg hover:bg-gray-300/50 transition-colors animate__animated animate__fadeInBottomRight ms1s5">
-        <img loading="lazy" decoding="async" loading="lazy" src="./public/images/tujuan/web-application.svg" alt="Web Application" class="w-12 h-12">
-        <div>
-          <h3 class="font-bold text-xl text-white">Web Application</h3>
-          <p class="text-gray-200 mt-2">Siswa diharapkan mampu membuat aplikasi website dari nol dengan mengikuti standar pemrograman yang berlaku di dunia industri saat ini.</p>
-        </div>
       </div>
     </div>
-  </div>
+
+    
 </section>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init({ once: false }); // Ensures animations repeat when triggered
 
-
-
+  document.addEventListener("DOMContentLoaded", () => {
+    const cards = document.querySelectorAll(".card");
+    let currentIndex = 0;
+  
+    function animateCards() {
+      cards.forEach((card, index) => {
+        // Remove active classes
+        card.classList.remove("scale-125", "bg-gray-800");
+        card.querySelector(".icon").classList.remove("active-icon");
+        card.querySelector("h3").classList.remove("active-title");
+        card.querySelector("p").classList.remove("active-text");
+  
+        if (index === currentIndex) {
+          // Add active state classes
+          card.classList.add("scale-125", "bg-gray-800");
+          card.querySelector(".icon").classList.add("active-icon");
+          card.querySelector("h3").classList.add("active-title");
+          card.querySelector("p").classList.add("active-text");
+  
+          // Reset animations by removing classes, forcing reflow, and re-adding them
+          const img = card.querySelector(".icon");
+          const h3 = card.querySelector("h3");
+          const p = card.querySelector("p");
+  
+          // Reset animations by removing classes, forcing reflow, and re-adding them
+          img.classList.remove("animate__animated", "animate__flipInX");
+          h3.classList.remove("animate__animated", "animate__fadeInLeft");
+          p.classList.remove("animate__animated", "animate__fadeInUp");
+  
+          void img.offsetWidth; // Trigger reflow
+          void h3.offsetWidth;
+          void p.offsetWidth;
+  
+          // Animate components inside the card
+          setTimeout(() => {
+            img.classList.add("animate__animated", "animate__flipInX");
+            h3.classList.add("animate__animated", "animate__fadeInLeft");
+            p.classList.add("animate__animated", "animate__fadeInUp");
+          }, 0);
+        }
+      });
+  
+      // Move to the next card
+      currentIndex = (currentIndex + 1) % cards.length;
+    }
+  
+    // Start animation loop every 5 seconds
+    setInterval(animateCards, 5000);
+  });
+  
+  
+</script>
 </body>
 </html>
 
