last ngoding before no ngoding november :pensive: :point_up:

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       <p class="mt-4 text-gray-200">Jurusan PPLG, tujuan jurusan ini adalah membekali siswa dengan keterampilan dalam pengembangan perangkat lunak, pemrograman, dan teknologi digital. Kami fokus pada penguasaan teknik coding, pembuatan aplikasi, dan analisis sistem yang relevan dengan industri. Harapannya, lulusan siap bersaing dalam dunia kerja atau melanjutkan pendidikan lebih tinggi.</p>
     </div>
     <div class="grid grid-cols-1 gap-12 lg:col-span-2 sm:grid-cols-2" id="card-container">
-      <div class="relative flex items-start space-x-4 p-4 rounded-lg hover:bg-gray-300/50 transition-colors duration-300 group card" data-aos="zoom-in" data-aos-delay="500">
+      <div class="relative flex items-start space-x-4 p-4 rounded-lg transition-colors duration-300 group card" data-aos="zoom-in" data-aos-delay="500">
         <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" class="icon default-icon  text-gray-200" viewBox="0 0 502.664 502.664">
             <path d="M310.166,397.593H75.951V61.671h234.151v25.13h31.472V54.811C341.595,24.677,316.853,0,286.74,0H99.355
                 C69.199,0,44.522,24.677,44.522,54.811v393.02c0,30.178,24.677,54.833,54.833,54.833H286.74
@@ -245,7 +245,7 @@
             <p class="text-gray-200 mt-2">Siswa diharapkan mampu membuat aplikasi mobile berbasis sistem operasi Android untuk dioperasikan di smartphone masing-masing.</p>
         </div>
       </div>
-      <div class="relative flex items-start space-x-4 p-4 rounded-lg hover:bg-gray-300/50 transition-colors duration-300 group card" data-aos="zoom-in" data-aos-delay="500">
+      <div class="relative flex items-start space-x-4 p-4 rounded-lg transition-colors duration-300 group card" data-aos="zoom-in" data-aos-delay="500">
         <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" class="icon default-icon  text-gray-200" viewBox="0 0 502.664 502.664">
             <path d="M310.166,397.593H75.951V61.671h234.151v25.13h31.472V54.811C341.595,24.677,316.853,0,286.74,0H99.355
                 C69.199,0,44.522,24.677,44.522,54.811v393.02c0,30.178,24.677,54.833,54.833,54.833H286.74
@@ -268,7 +268,7 @@
             <p class="text-gray-200 mt-2">Siswa diharapkan mampu membuat aplikasi mobile berbasis sistem operasi Android untuk dioperasikan di smartphone masing-masing.</p>
         </div>
       </div>
-      <div class="relative flex items-start space-x-4 p-4 rounded-lg hover:bg-gray-300/50 transition-colors duration-300 group card" data-aos="zoom-in" data-aos-delay="500">
+      <div class="relative flex items-start space-x-4 p-4 rounded-lg transition-colors duration-300 group card" data-aos="zoom-in" data-aos-delay="500">
         <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" class="icon default-icon  text-gray-200" viewBox="0 0 502.664 502.664">
             <path d="M310.166,397.593H75.951V61.671h234.151v25.13h31.472V54.811C341.595,24.677,316.853,0,286.74,0H99.355
                 C69.199,0,44.522,24.677,44.522,54.811v393.02c0,30.178,24.677,54.833,54.833,54.833H286.74
@@ -291,7 +291,7 @@
             <p class="text-gray-200 mt-2">Siswa diharapkan mampu membuat aplikasi mobile berbasis sistem operasi Android untuk dioperasikan di smartphone masing-masing.</p>
         </div>
       </div>
-      <div class="relative flex items-start space-x-4 p-4 rounded-lg hover:bg-gray-300/50 transition-colors duration-300 group card" data-aos="zoom-in" data-aos-delay="500">
+      <div class="relative flex items-start space-x-4 p-4 rounded-lg transition-colors duration-300 group card" data-aos="zoom-in" data-aos-delay="500">
         <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" class="icon default-icon  text-gray-200" viewBox="0 0 502.664 502.664">
             <path d="M310.166,397.593H75.951V61.671h234.151v25.13h31.472V54.811C341.595,24.677,316.853,0,286.74,0H99.355
                 C69.199,0,44.522,24.677,44.522,54.811v393.02c0,30.178,24.677,54.833,54.833,54.833H286.74
